--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,3 +1,9 @@
+$primary-color: #0282f9;
+$black-color: black;
+$white-color: white;
+$secondary-color: #303030;
+
+
 @import '~bootstrap/scss/bootstrap';
 
 @import 'partials/header';
