add fixed style main

--- a/resources/scss/partials/_main.scss
+++ b/resources/scss/partials/_main.scss
@@ -2,12 +2,15 @@
     background-color: $secondary-color;
 }
 
-.card {
+/* .card {
     border: none;
-}
+} */
+
+
 
 .imgSeries {
-    height: 200px;
+    aspect-ratio: 1/1;
+   
 }
 
 .j_btn_top {
